--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Imports:
     taxonomizr
 Depends:
         R (>= 3.6.3)
-License: : GPL-3
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.0
