--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,14 @@ Description: This package can build a datbase from genetic marker sequences for 
 Imports:
     Biostrings (>= 2.42.0),
     RCurl,
-    taxonomizr
+    taxonomizr,
+    DECIPHER,
+    Rcpp
 Depends:
-        R (>= 3.6.0)
+        R (>= 3.6.0),
+        Rcpp
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.0
+RoxygenNote: 7.1.1
+LinkingTo: Rcpp
