Recursive training classifier (including usage in readme).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ export(getBadSpecies)
 export(getBadTaxa)
 export(getENAdownloads)
 export(getMatrices)
+export(idTaxaTrainAndClean)
 export(isACGT)
 importFrom(DECIPHER,AlignSeqs)
 importFrom(DECIPHER,DistanceMatrix)
 importFrom(DECIPHER,IdClusters)
+importFrom(DECIPHER,LearnTaxa)
 importFrom(RCurl,curlOptions)
 importFrom(Rcpp,sourceCpp)
 importFrom(utils,download.file)
