S3 class for the downloads (plus accessors)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ export(getAccession4ENAname)
 export(getBadSpecies)
 export(getBadTaxa)
 export(getENAdownloads)
+export(getFiles)
 export(getMatrices)
+export(getShouldBe)
+export(getURLs)
 export(idTaxaTrainAndClean)
 export(isACGT)
 importFrom(DECIPHER,AlignSeqs)
