--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,3 +19,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 LinkingTo: Rcpp
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
