--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(getENAdownloads)
 export(getFiles)
 export(getMatrices)
 export(getShouldBe)
+export(getSubsequeces)
 export(getURLs)
 export(idTaxaTrainAndClean)
 export(isACGT)
